Archive2/37/6366e5e10b7712/output
main.cpp:1:1: error: expected unqualified-id before '<' token
 <script>
 ^
